feat: add swagger example
