# backend/controllers/struct/test.go
@@ -1,9 +1,0 @@
-package controllers
-
-type TestRequest struct {
-	
-}
-
-type TestResponse struct {
-	Message string `json:"message"`
-}
